# py-web-12

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2757f2613aa6_update_user_model.py  54aac62d4545_update_users_and_contacts_tables.py  6280fc9e93a6_create_users_and_contacts_tables.py  c35208440f3b_create_contacts_table.py  d1842c153d01_create_users_and_contacts_tables.py  f7389c1f7ab6_create_contacts_table.py
src/: models.py  schemas.py  utils.py
src/database/: db.py  models.py  utils.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth_service.py
static/: contacts.html  index.html
